--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
         <img class="hero-imagen-desarrollador rounded-circle" src="imagenes/AngelesPuente.jpeg" alt="Foto de Angeles Puente">
         <h1>Hola, soy Angeles Puente</h1>
-        <!--<h2>Desarrollo sitios web y escribo artículos sobre programación.</h2>-->
+        <!--<h2>Estudio ingeniería y doy asesorías.</h2>-->
 
         <!--Animación con JavaScript-->
         <h2 class="text-primary mb-4" id="typewriter"></h2>
@@ -217,7 +217,7 @@
               <p class="testimonio-texto">Angeles es una gran amiga y fue un gusto llevar el bootcamp de Tecnolochicas a la par con ella, tiene grandes habilidades dentro del tema de diseño CAD, además de que pude observar como reforzó su conocimiento en la programación web mediante las herramientas de HTML y CSS.</p>
               <div class="testimonio-info">
                 <p class="cliente">Karen Pérez</p>
-                <p class="cargo">Estudiante de Ingeniería Mecatrónica</p>
+                <p class="cargo">Estudiante de Ingeniería en Mecatrónica</p>
               </div>
             </div>
           </div>
@@ -242,7 +242,7 @@
               ¡Hablemos!
             </div>
             <div class="col-12 col-md-4 descripcion">
-              Contáctame para iniciar tu proyecto de diseño o si necesitas alguna asesoría.
+              Contáctame para iniciar tu proyecto de diseño o si necesitas asesorías.
             </div>
             <div class="col-12 col-md-4">
               <a href="mailto:maria.puentepn@hotmail.com">
