--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
     <!-- Pie de pagina (footer) -->
     <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center"> 
       <img class="footer-logo" src="imagenes/icono-blanco.svg" alt="Logo del portafolio">
-      <p class="footer-texto text-center">Aprendo y creo todos los días.<br>Creemos un proyecto juntos.</p>
+      <p class="footer-texto text-center">Antes de conseguir el éxito,<br>debes creer que puedes hacerlo.</p>
       <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
         <a href="https://github.com/mariapuentepn" target="_blank" rel="noopener noreferrer">
           <i class="bi bi-github"></i>
